# encoding_tables

./: .readthedocs.yml  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.md  README.md
.github/workflows/: macosx.yml  push-pull_request.yml  ubuntu.yml  windows.yml
cmake/: ztd.encoding_tables-config.cmake.in
documentation/: CMakeLists.txt
include/ztd/: encoding_tables.h  encoding_tables.hpp
include/ztd/encoding_tables/: atari_st.tables.h  atari_st.tables.hpp  atascii.tables.h  atascii.tables.hpp  big5_hkscs.tables.h  big5_hkscs.tables.hpp  euc_kr_uhc.tables.h  euc_kr_uhc.tables.hpp  gb18030.tables.h  gb18030.tables.hpp  gbk.tables.h  gbk.tables.hpp  generic.tables.h  generic.tables.hpp  ibm_1006_urdu.tables.h  ibm_1006_urdu.tables.hpp  ibm_424_hebrew_bulletin.tables.h  ibm_424_hebrew_bulletin.tables.hpp  ibm_856_hebrew.tables.h  ibm_856_hebrew.tables.hpp  ibm_866.tables.h  ibm_866.tables.hpp  ibm_866_cyrillic.tables.h  ibm_866_cyrillic.tables.hpp  iso_8859_10.tables.h  iso_8859_10.tables.hpp  iso_8859_13.tables.h  iso_8859_13.tables.hpp  iso_8859_14.tables.h  iso_8859_14.tables.hpp  iso_8859_15.tables.h  iso_8859_15.tables.hpp  iso_8859_16.tables.h  iso_8859_16.tables.hpp  iso_8859_1_1985.tables.h  iso_8859_1_1985.tables.hpp  iso_8859_1_1998.tables.h  iso_8859_1_1998.tables.hpp  iso_8859_2.tables.h  iso_8859_2.tables.hpp  (+62 more)
source/ztd/: encoding_tables.c.c
source/ztd/encoding_tables/: atari_st.tables.cpp  atascii.tables.cpp  big5_hkscs.cpp  euc_kr_uhc.tables.cpp  gb18030.tables.cpp  gbk.tables.cpp  generic.tables.cpp  ibm_1006_urdu.tables.cpp  ibm_424_hebrew_bulletin.tables.cpp  ibm_856_hebrew.tables.cpp  ibm_866.cpp  ibm_866_cyrillic.tables.cpp  iso_8859_10.tables.cpp  iso_8859_13.tables.cpp  iso_8859_14.tables.cpp  iso_8859_15.tables.cpp  iso_8859_16.tables.cpp  iso_8859_1_1985.tables.cpp  iso_8859_1_1998.tables.cpp  iso_8859_2.tables.cpp  iso_8859_3.tables.cpp  iso_8859_4.tables.cpp  iso_8859_5.tables.cpp  iso_8859_6.tables.cpp  iso_8859_7.tables.cpp  iso_8859_8.tables.cpp  kamenicky.tables.cpp  kazakh_strk1048.tables.cpp  koi8_r.tables.cpp  koi8_u.tables.cpp  mac_cyrillic.tables.cpp  mac_roman.tables.cpp  shift_jis_x0208.tables.cpp  tatar_ansi.tables.cpp  tatar_ascii.tables.cpp  windows_1251.tables.cpp  windows_1252.tables.cpp  windows_1253.tables.cpp  windows_1254.tables.cpp  windows_1255.tables.cpp  (+6 more)
tests/: CMakeLists.txt
tests/inclusion/: CMakeLists.txt
tests/inclusion/generator/: inclusion_test.py
tests/inclusion/source/: main.cpp
tests/inclusion/source/ztd/: encoding_tables.c.c  encoding_tables.cpp
tests/inclusion/source/ztd/encoding_tables/: euc_kr_uhc.tables.c.cpp  euc_kr_uhc.tables.cpp  gbk.tables.c.c  gbk.tables.c.cpp  gbk.tables.cpp  shift_jis_x0208.tables.c.c  shift_jis_x0208.tables.c.cpp  shift_jis_x0208.tables.cpp  table_types.c.c  table_types.c.cpp  table_types.cpp  windows_1252.tables.c.c  windows_1252.tables.c.cpp  windows_1252.tables.cpp
